--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,20 @@
-# volumes:
+volumes:
+  postgres-data:
+    external: true
 services:
+  postgres:
+    image: postgres:14.5-bullseye
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: secret
+      POSTGRES_USER: example_user
+      POSTGRES_DB: postgres-data
+    ports:
+      - 15432:5432
   fastapi:
     environment:
+      DATABASE_URL: postgresql://example_user:secret@postgres/postgres-data
       CORS_HOST: http://localhost:3000
     build:
       context: api
