--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,19 @@
 volumes:
   postgres-data:
     external: true
+  pg-admin:
+    external: true
 services:
+  pg-admin:
+    image: dpage/pgadmin4
+    volumes:
+      - pg-admin:/var/lib/pgadmin
+    ports:
+      - 8082:80
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@mindfulcodesquad.com
+      PGADMIN_DEFAULT_PASSWORD: password
+      PGADMIN_DISABLE_POSTFIX: 1
   postgres:
     image: postgres:14.5-bullseye
     volumes:
