--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       - 15432:5432
   fastapi:
     environment:
-      DATABASE_URL: postgresql://example_user:secret@postgres/postgres-data
+      DATABASE_URL: postgresql://example_user:secret@thrive-together-postgres-1/postgres-data
       CORS_HOST: http://localhost:3000
     build:
       context: api
