--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
       DATABASE_URL: postgresql://example_user:secret@thrive-together-postgres-1/postgres-data
       CORS_HOST: http://localhost:3000
       SIGNING_KEY: ${SIGNING_KEY}
+      PYTHONDONTWRITEBYTECODE: 1
     build:
       context: api
       dockerfile: Dockerfile.dev
